; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/class/android/os/extr_Bundle.c_J4AC_android_os_Bundle__getInt__withCString__catchAll.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/class/android/os/extr_Bundle.c_J4AC_android_os_Bundle__getInt__withCString__catchAll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32* (%struct.TYPE_7__**, i8*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @J4AC_android_os_Bundle__getInt__withCString__catchAll(%struct.TYPE_7__** %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.TYPE_7__**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  store %struct.TYPE_7__** %0, %struct.TYPE_7__*** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  store i64 0, i64* %9, align 8
  store i32* null, i32** %10, align 8
  %11 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %5, align 8
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %12, i32 0, i32 0
  %14 = load i32* (%struct.TYPE_7__**, i8*)*, i32* (%struct.TYPE_7__**, i8*)** %13, align 8
  %15 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %5, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = call i32* %14(%struct.TYPE_7__** %15, i8* %16)
  store i32* %17, i32** %10, align 8
  %18 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %5, align 8
  %19 = call i64 @J4A_ExceptionCheck__catchAll(%struct.TYPE_7__** %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %4
  %22 = load i32*, i32** %10, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %25, label %24

24:                                               ; preds = %21, %4
  br label %36

25:                                               ; preds = %21
  %26 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %5, align 8
  %27 = load i32, i32* %6, align 4
  %28 = load i32*, i32** %10, align 8
  %29 = load i64, i64* %8, align 8
  %30 = call i64 @J4AC_android_os_Bundle__getInt__catchAll(%struct.TYPE_7__** %26, i32 %27, i32* %28, i64 %29)
  store i64 %30, i64* %9, align 8
  %31 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %5, align 8
  %32 = call i64 @J4A_ExceptionCheck__catchAll(%struct.TYPE_7__** %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %25
  store i64 0, i64* %9, align 8
  br label %36

35:                                               ; preds = %25
  br label %36

36:                                               ; preds = %35, %34, %24
  %37 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %5, align 8
  %38 = call i32 @J4A_DeleteLocalRef__p(%struct.TYPE_7__** %37, i32** %10)
  %39 = load i64, i64* %9, align 8
  ret i64 %39
}

declare dso_local i64 @J4A_ExceptionCheck__catchAll(%struct.TYPE_7__**) #1

declare dso_local i64 @J4AC_android_os_Bundle__getInt__catchAll(%struct.TYPE_7__**, i32, i32*, i64) #1

declare dso_local i32 @J4A_DeleteLocalRef__p(%struct.TYPE_7__**, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
